## Python bindings for DirtMP
# include_directories("${PROJECT_SOURCE_DIR}/src/prx/external")
message("Building python bindings")
find_package (Python COMPONENTS Interpreter Development)
if (${Python_VERSION_MAJOR} EQUAL 3)
    message("Using Python 3")
    find_package(Boost REQUIRED COMPONENTS python3)
    # set(Python_ADDITIONAL_VERSIONS 3.9)
    find_package(PythonLibs 3 REQUIRED)
    set(Boost_PY_LIBS ${Boost_PYTHON3_LIBRARY})
    include_directories(${Boost_INCLUDE_DIRS})
	include_directories(${PYTHON_INCLUDE_DIRS})
else()
    message("Using Python 2.7")
    find_package(Boost REQUIRED COMPONENTS python27)
    set(Python_ADDITIONAL_VERSIONS 2.7)
    find_package(PythonLibs 2.7 REQUIRED)
    set(Boost_PY_LIBS ${Boost_PYTHON27_LIBRARY})
	include_directories(${Boost_INCLUDE_DIRS})
	include_directories(${PYTHON_INCLUDE_DIRS})
endif()

file(GLOB_RECURSE SRC_PRX_LIB_PY ./*.cpp)

add_library(py${PROJECT_NAME} MODULE pyprx.cpp)

target_include_directories(py${PROJECT_NAME} PUBLIC ".")

target_link_libraries(py${PROJECT_NAME} ${Boost_PY_LIBS} ${PYTHON_LIBRARIES})
target_link_libraries(py${PROJECT_NAME} ${YAMLCPP_LIBRARY} ${YAML_CPP_LIBRARIES})
target_link_libraries(py${PROJECT_NAME} ${PROJECT_NAME}_external)
target_link_libraries(py${PROJECT_NAME} ${PROJECT_NAME}_utilities)
target_link_libraries(py${PROJECT_NAME} ${PROJECT_NAME}_visualization)
target_link_libraries(py${PROJECT_NAME} ${PROJECT_NAME}_simulation)
target_link_libraries(py${PROJECT_NAME} ${PROJECT_NAME}_planning)
target_link_libraries(py${PROJECT_NAME} ${PROJECT_NAME}_bullet_sim)